add something to report

--- a/docs/final/original_project_final.tex
+++ b/docs/final/original_project_final.tex
@@ -61,10 +61,40 @@ Yi Yang\\
 \section{Introduction}
 
 \subsection{Dobot}
-The Dobot Magician Robot Arm is multi-task robot arm that has black and white body with consistent qualityat fingertipsUnibody design, unbox and enjoy right away Designed for desktop, safe and easily lifted. It contains a Vacuum pump Kit , Gripper, Wirting and Drawing Kit, 3D Printing Kit, and other accessories.
+The Dobot Magician Robot Arm is multi-task robot arm that has black and white body with consistent qualityat fingertipsUnibody design, unbox and enjoy right away Designed for desktop, safe and easily lifted. It contains a Vacuum pump Kit , Gripper, Wirting and Drawing Kit, 3D Printing Kit, and other accessories.It has many features like writing, drawing, 3D printing and even playing chessing with human.
 
-It has many features like writing, drawing, 3D printing and even playing chessing with human.  
+Dobot Magician is an All-in-One Robot arm for Education. It can be controlled by PC, phone, gesture or voice since it can communicate by USB, Wifi and Bluetooch.Dobot Magician has 4 axes while its maximum reach is 320mm and its position repeatability(control) is 0.2mm. Dobot magician has 13 extension ports, 1 programmable key and 2MB offline command storage. One of dobot’s main characters is its various endeffectors, such as 3D Printer Kit, pen holder, vacuum suction cap, gripper and laser. The softwares for dobot magician are DobotStudio(for Windows XP, win7 SPI, win8/win10, mac osx 10.10 and mac osx 10.11, mac osx 10.12), Repetier Host, GrblController3.6, DobotBlockly (Visual Programing editor) while the software develop kit is Communication Protocol, Dobot Program Library. In ROS, dobot doesn’t have much function except controlling the arm by keyboard using package.
 
+Dobot magician has 13 extension ports, 1 programmable key and 2MB offline command storage. One of dobot’s main characters is its various endeffectors, such as 3D Printer Kit, pen holder, vacuum suction cap, gripper and laser.The softwares for dobot magician are DobotStudio(for Windows XP, win7 SPI, win8/win10, mac osx 10.10 and mac osx 10.11, mac osx 10.12), Repetier Host, GrblController3.6, DobotBlockly (Visual Programing editor) while the software develop kit is Communication Protocol, Dobot Program Library. In ROS, dobot doesn’t have much function except controlling the arm by keyboard using package.
+
+The figure below is what the Dobot arm looks like.
+
+\begin{figure}[t]
+\begin{center}
+	\includegraphics[width=0.8\linewidth]{dobot1.png}
+\end{center}
+   \caption{Dobot Magician Arm}
+\label{fig:long}
+\label{fig:onecol}
+\end{figure}
+
+\begin{figure}[t]
+\begin{center}
+	\includegraphics[width=0.8\linewidth]{dobot2.png}
+\end{center}
+   \caption{Dobot Magician Arm}
+\label{fig:long}
+\label{fig:onecol}
+\end{figure}
+
+\begin{figure}[t]
+\begin{center}
+	\includegraphics[width=0.8\linewidth]{dobot3.png}
+\end{center}
+   \caption{Dobot Magician Arm}
+\label{fig:long}
+\label{fig:onecol}
+\end{figure}
 
 \subsection{URDF}
 
